style: fixed alignment on some elements

--- a/style.css
+++ b/style.css
@@ -1264,7 +1264,7 @@ textarea:focus {
   }
 }
 
-@media only screen and (max-width: 800px) {
+@media only screen and (max-width: 818px) {
   .about__team-member:not(nth-child(3n)) {
     flex-basis: 49%;
   }
